--- a/css/style.css
+++ b/css/style.css
@@ -18,32 +18,41 @@ html {
 img {
   max-width: 100%; }
 
-h3 {
-  margin-bottom: 30px; }
-
 /* Colours */
 /* Section */
+h3.section-title {
+  margin-bottom: 60px; }
+
 .section__content {
   padding: 60px 0; }
 
-.section--highlight {
+.section--blue {
   background-color: #039be5;
   color: #ffffff; }
+
+.section--grey {
+  background-color: #f5f5f5; }
 
 /**
  *
  * COMPONENTS
  *
  */
+/* Nav */
+.navbar-brand img {
+  height: 50px;
+  object-fit: contain; }
+
 /* Carousel */
-.carousel__item img {
+.carousel-item img {
   height: 450px;
   object-fit: cover; }
 
 /* Advantage */
 .advantage__item {
   position: relative;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  margin-bottom: 30px; }
   .advantage__item:hover {
     box-shadow: rgba(0, 0, 0, 0.2) 0 15px 20px;
     margin: -5px 0 5px; }
@@ -65,11 +74,15 @@ h3 {
     opacity: 1; }
 
 .advantage__title {
-  background: #ffffff;
-  color: #039be5;
   padding: 10px;
   text-align: center;
-  z-index: 1; }
+  z-index: 1;
+  background-color: #039be5;
+  color: #ffffff; }
+
+.section--blue .advantage__title {
+  background: #ffffff !important;
+  color: #039be5 !important; }
 
 .advantage__text {
   position: absolute;
@@ -81,5 +94,16 @@ h3 {
   z-index: 1;
   transition: all .3s ease;
   text-align: center; }
+
+/* Footer */
+footer {
+  background-color: #039be5;
+  color: #ffffff; }
+  footer a {
+    color: #ffffff; }
+
+.footer__bottom {
+  padding: 10px 0;
+  background-color: #0776ad; }
 
 /*# sourceMappingURL=style.css.map */
