--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,23 +22,29 @@ img {
 	max-width: 100%;
 }
 
-h3 {
-	margin-bottom: 30px;
-}
-
 /* Colours */
 $blue: #039be5;
 $white: #ffffff;
+$grey: #f5f5f5;
+$darkblue: #0776ad;
 
 /* Section */
 
-.section__content {
+h3.section-title {
+	margin-bottom: 60px;
+}
+
+.section__content{
 	padding: 60px 0;
 }
 
-.section--highlight {
+.section--blue {
 	background-color: $blue;
 	color: $white;
+}
+
+.section--grey {
+	background-color: $grey;
 }
 /**
  *
@@ -46,9 +52,18 @@ $white: #ffffff;
  *
  */
 
+/* Nav */
+
+.navbar-brand {
+	img {
+		height: 50px;
+		object-fit: contain;
+	}
+}
+
 /* Carousel */
 
-.carousel__item img {
+.carousel-item img {
     height: 450px;
     object-fit: cover;
 }
@@ -57,6 +72,7 @@ $white: #ffffff;
 .advantage__item {
 	position: relative;
 	transition: all .3s ease;
+	margin-bottom: 30px;
 	&:hover {
 		box-shadow: rgba(0, 0, 0, 0.2) 0 15px 20px;
 		margin: -5px 0 5px;
@@ -83,11 +99,18 @@ $white: #ffffff;
 }
 
 .advantage__title {
-    background: $white;
-    color: $blue;
     padding: 10px;
     text-align: center;
     z-index: 1;
+    background-color: $blue;
+    color: $white;
+}
+
+.section--blue {
+	.advantage__title {
+		background: $white !important;
+    	color: $blue !important;
+	}
 }
 
 .advantage__text {
@@ -100,4 +123,18 @@ $white: #ffffff;
     z-index: 1;
     transition: all .3s ease;
     text-align: center;
+}
+
+/* Footer */
+footer {
+	background-color: $blue;
+	color: $white;
+	a {
+		color: $white;
+	}
+}
+
+.footer__bottom {
+	padding: 10px 0;
+	background-color: $darkblue;
 }
