--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,87 +15,131 @@
  */
 
 html {
-    font-size: 14px;
+    font-size: 15px;
     overflow-x: hidden;
 }
-img {
-	max-width: 100%;
+
+body {
+    font-family: 'Brandon Grotesque';
+    font-weight: 500;
+    letter-spacing: .1px;
 }
 
+img {
+    max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 500;
+}
+
+p {
+    font-weight: 300;
+}
+
+
+
+
 /* Colours */
-$blue: #039be5;
+
+$blue: #01bfff;
 $white: #ffffff;
 $grey: #f5f5f5;
 $darkblue: #0776ad;
 
+
+
+
 /* Section */
 
 h3.section-title {
-	margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
-.section__content{
-	padding: 60px 0;
+.section__content {
+    padding: 80px 0;
 }
 
 .section--blue {
-	background-color: $blue;
-	color: $white;
+    background-color: $blue;
+    color: $white;
 }
 
 .section--grey {
-	background-color: $grey;
+    background-color: $grey;
 }
+
+
+
+
 /**
  *
  * COMPONENTS
  *
  */
 
+
 /* Nav */
 
 .navbar-brand {
-	img {
-		height: 50px;
-		object-fit: contain;
-	}
+    img {
+        height: 50px;
+        object-fit: contain;
+    }
 }
+
+
+
 
 /* Carousel */
 
 .carousel-item img {
-    height: 450px;
+    height: 500px;
     object-fit: cover;
 }
 
+.carousel-caption {
+	background: rgba(0, 0, 0, 0.5);
+    bottom: 50px;
+    padding: 20px;
+}
+
+
+
 /* Advantage */
+
 .advantage__item {
-	position: relative;
-	transition: all .3s ease;
-	margin-bottom: 30px;
-	&:hover {
-		box-shadow: rgba(0, 0, 0, 0.2) 0 15px 20px;
-		margin: -5px 0 5px;
-	}
-	&:hover .advantage__text{
-		opacity: 1;
-	}
-	&:before {
-	    content: '';
-	    position: absolute;
-	    top: 0;
-	    right: 0;
-	    bottom: 0;
-	    left: 0;
-	    background: rgba(0, 0, 0, 0.4);
-	    z-index: 0;
-	    text-align:center;
-	    opacity: 0;
-	    transition: all .3s ease;
-	}
-	&:hover:before {
-		opacity: 1;
-	}
+    position: relative;
+    transition: all .3s ease;
+    margin-bottom: 30px;
+    &:hover {
+        box-shadow: rgba(0, 0, 0, 0.2) 0 15px 20px;
+        margin: -5px 0 5px;
+    }
+    &:hover .advantage__text {
+        opacity: 1;
+    }
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.4);
+        z-index: 0;
+        text-align: center;
+        opacity: 0;
+        transition: all .3s ease;
+    }
+    &:hover:before {
+        opacity: 1;
+    }
 }
 
 .advantage__title {
@@ -107,10 +151,10 @@ h3.section-title {
 }
 
 .section--blue {
-	.advantage__title {
-		background: $white !important;
-    	color: $blue !important;
-	}
+    .advantage__title {
+        background: $white !important;
+        color: $blue !important;
+    }
 }
 
 .advantage__text {
@@ -125,16 +169,95 @@ h3.section-title {
     text-align: center;
 }
 
+
+
+
+/* Service */
+
+.service__item {
+    text-align: center;
+    position: relative;
+    img {
+        height: 100px;
+        width: auto;
+        transition: all .3s ease;
+    }
+    &:hover img {
+        margin: -5px 0 5px;
+    }
+    a {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        transition: all .3s ease;
+    }
+    &:hover {
+        color: $blue;
+    }
+}
+
+
+
+
+/* Testimoni */
+
+.testi__img {
+    border-radius: 50%;
+}
+
+.testi__slider {
+    padding-left: 60px;
+    padding-right: 60px;
+    .owl-nav {
+        display: block !important;
+    }
+    .owl-prev img,
+    .owl-next img {
+        height: 20px;
+    }
+
+    .owl-prev,
+    .owl-next {
+        background: transparent !important;
+        transition: all .3s ease;
+        &:hover {
+            background: #f5f5f5 !important;
+        }
+    }
+
+    .owl-prev {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+    }
+
+    .owl-next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
+    }
+}
+
+
+
+
+
+
 /* Footer */
+
 footer {
-	background-color: $blue;
-	color: $white;
-	a {
-		color: $white;
-	}
+    background-color: $blue;
+    color: $white;
+    a {
+        color: $white;
+    }
 }
 
 .footer__bottom {
-	padding: 10px 0;
-	background-color: $darkblue;
+    padding: 10px 0;
+    background-color: $darkblue;
 }
