--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,7 +42,10 @@ p {
     font-weight: 300;
 }
 
-
+a {
+    transition: all .3s ease;
+    text-decoration: none;
+}
 
 
 /* Colours */
@@ -295,11 +298,38 @@ h3.section-title {
 footer {
     background-color: $blue;
     color: $white;
-    a {
-        color: $white;
-    }
     .navbar-brand img {
     	height: 100px;
+    }
+    a {
+        opacity: .7;
+        color: $white !important;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+.list-menu-footer {
+    margin-top: 20px;
+    .navbar-nav {
+        flex-direction: row;
+        justify-content: center;
+    }
+    .nav-link {
+        text-transform: uppercase;
+        font-size: .9rem;
+        padding: 0 10px;
+    }
+}
+
+.footer__top {
+    padding-top: 40px;
+    padding-bottom: 20px;
+    .navbar-brand {
+        margin: 0 auto 10px;
+        display: block;
+        text-align: center;
     }
 }
 
