--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,11 @@
  *
  */
 html {
-  font-size: 15px;
+  font-size: 16px;
   overflow-x: hidden; }
 
 body {
-  font-family: 'Brandon Grotesque';
+  font-family: 'Avenir';
   font-weight: 500;
   letter-spacing: .1px; }
 
@@ -47,8 +47,8 @@ h3.section-title {
   padding: 80px 0; }
 
 .section__content--full > .container-fluid > .row > * {
-  padding-top: 80px;
-  padding-bottom: 80px; }
+  padding-top: 30px;
+  padding-bottom: 30px; }
 
 .section__content--full .section-title {
   position: absolute;
@@ -56,9 +56,24 @@ h3.section-title {
   left: 50%;
   transform: translate(-50%, -50%); }
 
+.section__content--full .section--blue {
+  background-image: linear-gradient(-134deg, #3023ae 0, #2ae2de 100%); }
+
 .section--blue {
   background-color: #446CB3;
   color: #ffffff; }
+  .section--blue.section--transparent {
+    position: relative; }
+    .section--blue.section--transparent:before {
+      content: '';
+      background-image: linear-gradient(-134deg, #3023ae 0, #2ae2de 100%);
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: block;
+      opacity: .9; }
 
 .section--grey {
   background-color: #f5f5f5; }
@@ -78,6 +93,21 @@ h3.section-title {
     height: 100px;
     object-fit: contain; }
 
+.navbar > .container {
+  position: relative; }
+
+.nav__phone {
+  position: absolute;
+  right: 22px;
+  top: 0px;
+  background: #0091d8;
+  border-radius: 5px; }
+  .nav__phone > a {
+    color: #fff !important;
+    padding: .2rem;
+    font-size: 14px;
+    display: inline-block; }
+
 /* Carousel */
 .carousel-item img {
   height: 550px;
@@ -96,6 +126,8 @@ h3.section-title {
   .advantage__item:hover {
     box-shadow: rgba(0, 0, 0, 0.2) 0 15px 20px;
     margin: -5px 0 5px; }
+    .advantage__item:hover .advantage__title {
+      opacity: 0; }
   .advantage__item:hover .advantage__text {
     opacity: 1;
     top: 50%; }
@@ -118,8 +150,12 @@ h3.section-title {
   padding: 10px;
   text-align: center;
   z-index: 1;
-  background-color: #446CB3;
-  color: #ffffff; }
+  color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bold; }
 
 .section--blue .advantage__title {
   background: #ffffff !important;
@@ -139,8 +175,8 @@ h3.section-title {
 
 @media (min-width: 993px) {
   .advantage__section {
-    padding-left: 45px;
-    padding-right: 45px; } }
+    padding-left: 30px;
+    padding-right: 30px; } }
 
 /* Service */
 .service__item {
@@ -164,11 +200,28 @@ h3.section-title {
 
 /* Testimoni */
 .testi__img {
-  border-radius: 50%; }
+  border-radius: 50%;
+  height: 130px;
+  display: block;
+  margin: 0 auto;
+  width: auto !important;
+  margin-bottom: 15px; }
 
 .testi__slider {
   padding-left: 60px;
   padding-right: 60px; }
+
+.testi__name {
+  font-size: 16px; }
+
+.testi__text {
+  text-align: center;
+  width: 60%;
+  display: block;
+  margin: 0 auto; }
+
+.testi__job {
+  font-size: 14px; }
 
 .owl-nav {
   display: block !important; }
@@ -216,6 +269,34 @@ h3.section-title {
   padding: 15px;
   text-align: center;
   background: rgba(0, 0, 0, 0.4); }
+
+/* Klien */
+.section__content--small {
+  padding: 20px; }
+
+.client__item img {
+  height: 130px;
+  display: block;
+  margin: 0 auto;
+  object-fit: contain; }
+
+/* Working Area */
+.working__area h3 {
+  margin-bottom: 0; }
+
+.working__area img {
+  height: 20px; }
+
+.working__area ul {
+  margin: 0; }
+
+.working__area ul li.working__area-item {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 22px; }
+
+.working__area > .container > .row > * {
+  padding: 45px; }
 
 /* Footer */
 footer {
