--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,12 +15,12 @@
  */
 
 html {
-    font-size: 15px;
+    font-size: 16px;
     overflow-x: hidden;
 }
 
 body {
-    font-family: 'Brandon Grotesque';
+    font-family: 'Avenir';
     font-weight: 500;
     letter-spacing: .1px;
 }
@@ -69,8 +69,8 @@ h3.section-title {
 }
 
 .section__content--full > .container-fluid > .row > * {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .section__content--full .section-title {
@@ -80,9 +80,27 @@ h3.section-title {
     transform: translate(-50%, -50%);
 }
 
+.section__content--full .section--blue {
+    background-image: linear-gradient(-134deg,#3023ae 0,#2ae2de 100%);
+}
+
 .section--blue {
     background-color: $blue;
     color: $white;
+    &.section--transparent {
+        position: relative;
+        &:before {
+            content: '';
+            background-image: linear-gradient(-134deg, #3023ae 0, #2ae2de 100%);   
+            position: absolute;
+            top:0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            display: block;
+            opacity: .9;
+        }    
+    }
 }
 
 .section--grey {
@@ -92,8 +110,6 @@ h3.section-title {
 .section--darkblue {
     background-color: $darkblue;
 }
-
-
 
 
 /**
@@ -113,7 +129,23 @@ h3.section-title {
     }
 }
 
+.navbar > .container {
+    position: relative;
+}
 
+.nav__phone {
+    position: absolute;
+    right: 22px;
+    top: 0px;
+    background: #0091d8;
+    border-radius: 5px;
+    > a {
+        color: #fff !important;
+        padding: .2rem;
+        font-size: 14px;
+        display: inline-block;
+    }
+}
 
 
 /* Carousel */
@@ -140,6 +172,9 @@ h3.section-title {
     &:hover {
         box-shadow: rgba(0, 0, 0, 0.2) 0 15px 20px;
         margin: -5px 0 5px;
+        .advantage__title {
+            opacity: 0;
+        }
     }
     &:hover .advantage__text {
         opacity: 1;
@@ -167,8 +202,12 @@ h3.section-title {
     padding: 10px;
     text-align: center;
     z-index: 1;
-    background-color: $blue;
-    color: $white;
+    color: #ffffff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
 }
 
 .section--blue {
@@ -193,8 +232,8 @@ h3.section-title {
 
 @media (min-width: 993px){
     .advantage__section {
-        padding-left: 45px;
-        padding-right: 45px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
 
@@ -226,17 +265,35 @@ h3.section-title {
 }
 
 
-
-
 /* Testimoni */
 
 .testi__img {
     border-radius: 50%;
+    height: 130px;
+    display: block;
+    margin: 0 auto;
+    width: auto !important;
+    margin-bottom: 15px;
 }
 
 .testi__slider {
     padding-left: 60px;
     padding-right: 60px;
+}
+
+.testi__name {
+    font-size: 16px;
+}
+
+.testi__text {
+    text-align: center;
+    width: 60%;
+    display: block;
+    margin: 0 auto;
+}
+
+.testi__job {
+    font-size: 14px;
 }
 
 .owl-nav {
@@ -293,6 +350,40 @@ h3.section-title {
     text-align: center;
     background: rgba(0, 0, 0, .4);
 }
+
+/* Klien */
+.section__content--small {
+    padding: 20px;
+}
+
+.client__item img {
+    height: 130px;
+    display: block;
+    margin: 0 auto;
+    object-fit: contain;
+}
+
+/* Working Area */
+.working__area {
+    h3 {
+        margin-bottom: 0;
+    }
+    img {
+        height: 20px;
+    }
+    ul {
+        margin: 0;
+    }
+    ul li.working__area-item {
+        display: inline-block;
+        margin-right: 10px;
+        font-size: 22px;
+    }
+    > .container > .row > * {
+        padding: 45px;
+    }
+}
+
 /* Footer */
 
 footer {
