--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ h3.section-title {
   margin-bottom: 0; }
 
 .working__area img {
-  height: 20px; }
+  height: 20px;
+  margin-bottom: 5px; }
 
 .working__area ul {
   margin: 0; }
